# LinAim

./: CMakeLists.txt  Makefile  README.md  suppr.txt
assets/shaders/: ballShader.vs  crosshair.vs  revolver.fs  revolver.vs  skyBox.fs  skyBox.vs
include/: ball.hpp  bullet.hpp  camera.hpp  crosshair.hpp  grid.hpp  player.hpp  shader.hpp  skyBox.hpp
include/core/: camera.hpp  configUI.hpp  game.hpp  mesh.hpp  model.hpp  player.hpp  shader.hpp  skyBox.hpp
include/entities/: ball.hpp  bullet.hpp  crosshair.hpp  grid.hpp  revolver.hpp  skyBox.hpp
include/overlays/: overlay.hpp  overlayFps.hpp  overlayPlayerScore.hpp
include/states/: state.hpp  stateDefinitions.hpp  stateFps.hpp  stateGame.hpp  stateSettings.hpp  stateStartMenu.hpp
src/: main.cpp
src/core/: camera.cpp  configUI.cpp  game.cpp  mesh.cpp  model.cpp  player.cpp  shader.cpp  skybox.cpp
src/entities/: ball.cpp  bullet.cpp  crosshair.cpp  grid.cpp  revolver.cpp  skybox.cpp
src/overlays/: overlay.cpp  overlayFps.cpp  overlayPlayerScore.cpp
src/shaders/: ballShader.fs  ballShader.vs  gridShader.vs
src/states/: state.cpp  stateFps.cpp  stateGame.cpp  stateSettings.cpp  stateStartMenu.cpp
